<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArithmeticActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="729dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="304dp"
            android:gravity="bottom|center_horizontal"
            android:layoutMode="clipBounds"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnPlusButton_onClick"
                android:text="@string/arithmetic_plusButton"
                android:textAlignment="center"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnMinusButton_onClick"
                android:text="@string/arithmetic_minusButton"
                android:textAlignment="center"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnDivisionButton_onClick"
                android:text="@string/arithmetic_divisionButton"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnPlusMinusButton_onClick"
                android:text="@string/arithmetic_plusminusButton"
                android:textSize="42sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnPMDButton_onClick"
                android:text="@string/arithmetic_PMDButton"
                android:textSize="42sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="104dp"
                android:layout_height="96dp"
                android:contentDescription="@string/arithmetic_backButtonDescription"
                android:onClick="btnBackButton_onClick"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/arrow_left_circle" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>