<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/appStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_start"
        android:textAlignment="center"
        android:textSize="42sp"
        android:onClick="btnStart_onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintVertical_bias="0.105" />

    <ImageButton
        android:id="@+id/settingImageButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_settingDescription"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appStartButton"
        app:layout_constraintVertical_bias="0.714"
        app:srcCompat="@drawable/settings" />

    <ImageButton
        android:id="@+id/mypageImageButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_mypageDescription"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settingImageButton"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appStartButton"
        app:layout_constraintVertical_bias="0.714"
        app:srcCompat="@drawable/user" />

</androidx.constraintlayout.widget.ConstraintLayout>