<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModeSelectActivity">

    <Button
        android:id="@+id/timeLimitModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_select_timeLimitModeButton"
        android:textSize="36sp"
        android:onClick="btn_timeLimitModeButton_onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <Button
        android:id="@+id/quantityModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="btn_quantityModeButton_onClick"
        android:text="@string/mode_select_quantityModeButton"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeLimitModeButton"
        app:layout_constraintVertical_bias="0.157" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/mode_select_backButtonDescription"
        android:scaleType="fitCenter"
        android:onClick="btnBackButton_onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityModeButton"
        app:srcCompat="@drawable/arrow_left_circle" />

</androidx.constraintlayout.widget.ConstraintLayout>